fix alignment

--- a/css/home.css
+++ b/css/home.css
@@ -48,7 +48,7 @@
 .figure2 {
   position: absolute;
   bottom: -800px;
-  right: 590px;
+  right: 620px;
 }
 
 .figure3 {
