--- a/css/new-feature.css
+++ b/css/new-feature.css
@@ -26,7 +26,7 @@
 
 .newpdThemedark {
   position: absolute;
-  right: 450px;
+  right: 400px;
   bottom: 60px;
 }
 
